[gd_scene load_steps=3 format=3 uid="uid://cyxwvf7w2xqy7"]

[ext_resource type="Script" path="res://scripts/card_display.gd" id="1_qwert"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_abcde"]
bg_color = Color(0.26, 0.26, 0.26, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="CardDisplay" type="PanelContainer"]
custom_minimum_size = Vector2(120, 180)
theme_override_styles/panel = SubResource("StyleBoxFlat_abcde")
script = ExtResource("1_qwert")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="CardVisual" type="ColorRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
color = Color(0.1, 0.5, 0.8, 1)

[node name="CardNameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Card Name"
horizontal_alignment = 1

[node name="LevelLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Level 1"
horizontal_alignment = 1

[node name="UpgradeProgressBar" type="ProgressBar" parent="VBoxContainer"]
layout_mode = 2
value = 50
show_percentage = false

[node name="ProgressLabel" type="Label" parent="VBoxContainer/UpgradeProgressBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "5 / 10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpgradeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Upgrade"